styles.css
* {
  margin: 0px;
  font-family: "PT Sans", sans-serif;
}

header {
  background: #4e5ac5;
  /* width: 100%; */
  z-index: 9;
  position: sticky;
  top: 0;
  padding-left: 15px;
  padding-right: 15px;
  height: 65px;
  box-shadow: 0 7px 6px -6px #222;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.left {
  /* flex: 6.2; */
  display: inline-block;
  padding-top: 0.3125rem;
  padding-bottom: 00.3125rem;
  margin-right: 1rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
  color: #fff;
  text-decoration: none;
}

.topbarOption {
  display: flex !important;
  flex-basis: auto;
  align-items: center;
}

.topbarMenu {
  display: flex;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  margin-left: auto !important;
}

.right {
  /* flex: 0.8; */
  color: #fff;
  transition: 0.35s;
  display: block;
  cursor: pointer;
  padding: 0.5rem 1rem;
}
.btn1 {
  cursor: pointer;
  background-color: #4285f4;
  color: #fff;
  margin: 0.375rem;
  text-transform: uppercase;
  border-radius: 0.125rem;
  padding: 0.84rem 2.14rem;
  font-size: 0.81rem;
  border: none;
}

.hero {
  width: 100%;
  height: 100vh;
  /* position: relative; */
  background-image: url("img/background.jpg");
  background-size: cover;
}

.introduction {
  /* position: absolute; */
  width: 100%;
  height: 100%;
  background-image: linear-gradient(
    rgba(42, 27, 161, 0.7),
    rgba(29, 210, 177, 0.7)
  );
}

.introBox {
  position: absolute;
  width: 100%;
  height: 93vh;
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  grid-template-columns: repeat(7, 1fr);
}

.introBox > .intro {
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 2;
  grid-row-end: 3;
  width: 490px;
  height: 200px;
  background-color: transparent;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.intro > h2 {
  font-size: 35px;
}

.buttons {
  display: flex;
  justify-content: flex-start;
}

.intro > .buttons > button {
  padding: 0.84rem 2.14rem;
  font-size: 0.81rem;
  font-weight: 300;
  margin: 0 10px 0 0;
}

.button-1 {
  display: flex;
  align-items: center;
  border: 1px solid white;
}

.button-2 {
  background-color: transparent;
  color: white;
  font-weight: 400;
  border: 2px solid white;
}

/* First Section */

.about {
  display: flex;
  flex-direction: column;
  min-height: 90vh !important;
  background-color: rgba(0, 0, 0, 0.05);
}

.tiles {
  width: 100%;
  flex: 0.33;
  display: flex;
  color: white;
}

.about > .tiles > .tile {
  flex: 0.25;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.tile--1 {
  background-color: #8f57f1;
}

.tile > i {
  flex: 0.2;
  font-size: 28px;
  color: white;
}

.tile > h2 {
  flex: 0.2;
}

.tile > p {
  padding: 0 30px;
}

.tile--2 {
  background-color: #b44fce;
}
.tile--3 {
  background-color: #339482;
}
.tile--4 {
  background-color: #25b9fd;
}

.about__title {
  flex: 0.33;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 15px;
}

.about__title > p {
  margin-top: 20px;
  color: grey;
}

.about__blocks {
  flex: 0.33;
  display: flex;
  justify-content: center;
  align-items: center;
}

.about__blocks > .block {
  width: 250px;
  height: 150px;
  margin: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.block > i {
  font-size: 40px;
}

.block > h2 {
  margin-top: 10px;
}
.block > p {
  color: grey;
  margin-top: 10px;
}

.block > .fa-dashboard {
  color: orange;
}

.fa-comments-o {
  color: rgb(37, 168, 219);
}
.fa-cubes {
  color: red;
}

/* Project Section */
.project {
  display: flex;
  align-items: center;
  justify-content: center;
}
.container {
  display: flex;
  align-items: center;
  /* padding: 30px 150px; */
  width: 72%;
  flex-direction: column;
}
.container > h1 {
  flex: 0.2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-top: 50px;
}

.container > p {
  margin-top: 20px;
  text-align: center;
  font-size: 1.25rem;
  font-weight: 300;
  padding-bottom: 40px;
  color: gray;
}

.project--1 {
  flex: 0.4;
}
.project--2 {
  flex: 0.4;
}
.projectDesc {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-bottom: 50px;
}

.projectDesc > img {
  flex: 0.25;
  max-width: 350px;
  height: 250px;
  border-radius: 5px;
  box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.3);
}

.projectDesc > .desc {
  flex: 0.65;
}

.description {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  padding: 10px;
}
.description > i {
  flex: 0.08;
  font-size: 26px;
  /* color: rgb(13, 187, 187); */
}
.fa-book {
  color: rgb(13, 187, 187);
}
.fa-code {
  color: red;
}

.fa-money {
  color: rgb(110, 12, 129);
}

.fa-bar-chart {
  color: rgb(110, 12, 129);
}

.fa-music {
  color: rgb(228, 48, 117);
}

.fa-smile-o {
  color: rgb(33, 187, 248);
}
.description > .sec {
  flex: 0.9;
  padding: 0px;
}
hr {
  margin-bottom: 50px;
  background-color: rgba(200, 200, 200, 0.1);
}

.sec > h1 {
  font-size: 20px;
}

.sec > p {
  color: grey;
  font-size: 14px;
  padding-top: 10px;
}

/* Pricing section */

.pricing {
  background-color: rgb(61, 69, 180);
  display: flex;
  /* flex-direction: column; */
  justify-content: center;
  align-items: center;
}

.container > .pricing-desc {
  flex: 0.2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
  color: white;
  font-size: 15px;
  /* padding: 0 20%; */
  margin: 50px;
}

.pricing-desc > h1 {
  font-size: 2.25rem;
}

.container > .pricing-desc > p {
  padding-top: 20px;
}

.price__tiles {
  flex: 0.6;
  /* width: 100%;
  height: 100%; */
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-bottom: 50px;
}

.price__tiles > .tile {
  width: 300px;
  height: 500px;
  /* position: relative; */
  background: url(img/image1.jpg);
  background-size: cover;
  /* margin: 20px; */
}

.price__tiles > .tile > .content {
  /* position: absolute; */
  width: 100%;
  height: 100%;
}

.tile > .con--1 {
  background: rgba(92, 88, 88, 0.6);
}
.tile > .con--2 {
  background: rgba(30, 240, 159, 0.5);
}
.tile > .con--3 {
  background: rgba(255, 70, 53, 0.5);
}

.tile > .content {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  color: white;
  font-size: 14px;
}

.content > h1 {
  flex: 0.15;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.25rem;
}

.content > .details {
  flex: 0.5;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.content > .details > p {
  margin: 10px;
}

.content > p {
  flex: 0.2 !important;
  font-size: 40px;
}

.content > p > span {
  font-size: 60px;
}

.content > button {
  padding: 10px 20px;
  font-size: 80%;
  background-color: transparent;
  color: white;
  border: 1px solid white;
}

/* Member Section */

.member {
  display: flex;
  align-items: center;
  justify-content: center;
}

.container > .heading {
  font-size: 15px;
  width: 100%;
  flex: 0.2;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 50px;
}

.heading > h1 {
  font-size: 2.25rem;
}

.container > .heading > p {
  margin-top: 15px;
  color: grey;
  text-align: center;
}

.container > .members {
  width: 100%;
  height: auto !important;
  flex: 0.8;
  display: flex;
  flex-direction: column;
}

.container > .mem {
  width: 100%;
  /* display: flex; */
  margin-bottom: 50px;
}

.container > .members__row {
  flex: 0.5;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}
.mem > .m {
  flex: 0.5;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

.mem > .m > img {
  width: 210px;
  height: 200px;
  flex: 0.4;
  border-radius: 5px;
  box-shadow: 4px 2px 5px grey;
}

.mem > .m > .des {
  flex: 0.4;
  width: 100%;
  height: 80%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  text-align: left;
  margin-right: 10px;
}

.mem > .m > .des > .name {
  flex: 0.15;
  font-size: 22px;
  padding-top: 15px;
}

.mem > .m > .des > .post {
  flex: 0.1;
  color: grey;
}

.mem > .m > .des > .desc {
  flex: 0.55;
  font-size: 15px;
  color: rgb(165, 161, 161);
  font-weight: 100;
  display: flex;
  align-items: center;
}

.mem > .m > .des > .link {
  flex: 0.2;
}
.link > i {
  color: rgb(59, 159, 226);
  font-size: 15px;
}

/* Fifth Section */

.contact {
  background: url(img/panorama-3094696_1920.jpg);
  background-size: cover;
  height: 100vh !important;
  /* position: relative; */
}

.contact > .main {
  /* position: absolute; */
  width: 100%;
  height: 100%;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
}

.container > h1 {
  flex: 0.1;
  font-size: 2.25rem;
  /* font-size: 15px; */
}

.container > p {
  flex: 0.1;
  font-size: 1.25rem;
  font-weight: 300;
  text-align: center;
}

.container > .userForm {
  margin-top: 30px;
  flex: 0.5;
  display: flex;
  min-height: 80%;
  width: 100%;
  border: 1px solid transparent;
  border-radius: 5px;
  background-color: white;
}

.userForm > .form {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.userForm > .form > .contactus {
  flex: 0.6;
  background-color: white;
}

.userForm > .form > .info {
  flex: 0.4;
}

.contactus {
  display: flex;
  flex-direction: column;
}

.contactus > .item {
  display: flex;
}

.contactus > .item > input {
  width: 100%;
  padding: 12px 5px;
  margin: 8px 0;
  display: inline-block;
  border-top: 1px solid transparent;
  border-right: 1px solid transparent;
  border-left: 1px solid transparent;
  border-bottom: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.contactus > .name-email {
  flex: 0.2;
  display: flex;
}

.contactus > .name-email > input {
  flex: 0.5;
  margin: 5% 5%;
}

.contactus > .subject {
  flex: 0.2;
  margin: 0 5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contactus > .message {
  flex: 0.3;
  margin: 0 5%;
  text-align: start;
}

.contactus > .send {
  flex: 0.3;
  margin-top: 1%;
  display: flex;
  align-items: center;
}

.send > button {
  margin: 0 5%;
  padding: 10px 25px;
  background-color: #4d55c5;
  color: white;
  border: 1px solid transparent;
  border-radius: 2px;
  font-size: 10px;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.info > .address {
  flex: 0.2;
}

.info > .contactNo {
  flex: 0.2;
}

.info > .mail {
  flex: 0.2;
}

.info > .item > i {
  color: #4d55c5;
  margin: 10px;
}

.info > .item > p {
  color: black;
}

/* Footer Section */

.footer {
  width: 100%;
  height: 15vh;
  display: flex;
  flex-direction: column;
}

.footer > .socialIcons {
  flex: 0.6;
  background-color: #4d55c5;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer > .socialIcons > i {
  font-size: 18px;
  padding: 0 15px;
  color: white;
}

.footer > .copy {
  flex: 0.5;
  background-color: #2e348d;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

